Added note on timezones

--- a/internal/cronical/html/index.html
+++ b/internal/cronical/html/index.html
@@ -48,6 +48,7 @@ body {
         <br>
         <input type="button" onclick="generate()" value="Generate"/>
     </form>
+    <p><b>Note:</b> the hours in your CRON expression must match the same timezone as your WebCal feed, which is typically UTC.</p>
     <h2>Output WebCal</h2>
     <form action="">
         <label for="filtered_url">Filtered WebCal URL:</label>
