Added more information to landing page

--- a/internal/cronical/html/index.html
+++ b/internal/cronical/html/index.html
@@ -56,5 +56,9 @@ body {
     </form>
     <br>
     <div id='calendar'></div>
+    <h2>Credits</h2>
+    Thanks to <a href="https://github.com/bricewge/icalendar2fullcalendar">https://github.com/bricewge/icalendar2fullcalendar</a> for the the conversion of the webcal format into the calendar widget.
+    <h2>Bugs and feedback</h2>
+    I created this application as a useful tool for myself. If you have any feedback, please raise an issue on GitHub or fork the project and raise a PR: <a href="https://github.com/andykuszyk/cronical">https://github.com/andykuszyk/cronical</a>.
 </body>
 </html>
